--- a/sd_vonglap_long.html
+++ b/sd_vonglap_long.html
@@ -8,15 +8,25 @@
 </head>
 <body>
     <script>
-        let tab;
+        let tab, i, j;
         tab = "<table border='1' width='300' cellspacing='0' cellpadding='3'>";
-
-        for (i = 1; i <= 10; i++){
+        i = j = 1;
+        // for (i = 1; i <= 10; i++){
+        //     tab = tab + "<tr>";
+        //         for(j = 1; j <= 10; j++){
+        //             tab = tab + "<td>" + i*j + "</td>";
+        //         }
+        //     tab = tab + "</tr>";
+        // }
+        while(i <= 10){
             tab = tab + "<tr>";
-                for(j = 1; j <= 10; j++){
+                while(j <= 10){
                     tab = tab + "<td>" + i*j + "</td>";
+                    j++;
                 }
             tab = tab + "</tr>";
+            j = 1;
+            i++;
         }
         tab = tab + "</table>";
         document.write(tab);
